--- a/shell/index.html
+++ b/shell/index.html
@@ -8,11 +8,11 @@
 	<title>Addie's Game (+ engine!)</title>
 	<style>
 		* {
-            font-family: 'Inter Display', system-ui;
-            font-feature-settings: 'liga' 1, 'calt' 1;
+			font-family: 'Inter Display', system-ui;
+			font-feature-settings: 'liga' 1, 'calt' 1;
 		}
 		html {
-			background-color: #0c1521;
+			background-color: transparent;
 			color: #fff;
 		}
 
@@ -25,7 +25,7 @@
 			width: 100%;
 			height: 100%;
 			touch-action: none;
-            -ms-touch-action: none;
+			-ms-touch-action: none;
 		}
 
 		canvas#game>* {
@@ -36,14 +36,14 @@
 			position: fixed;
 			margin: 0;
 			padding: 0;
-			background-color: #000;
+			background-color: transparent;
 			touch-action: none;
 			-ms-touch-action: none;
-            /*noinspection CssOverwrittenProperties*/
-            image-rendering: crisp-edges;
-            /*noinspection CssOverwrittenProperties*/
-            image-rendering: pixelated;
-            cursor: none;
+			/*noinspection CssOverwrittenProperties*/
+			image-rendering: crisp-edges;
+			/*noinspection CssOverwrittenProperties*/
+			image-rendering: pixelated;
+			/*cursor: none;*/
 		}
 
 		body {
@@ -54,8 +54,8 @@
 
 		div#overlay {
 			font-size: 16pt;
-            font-family: 'Inter Display', system-ui;
-            font-feature-settings: 'liga' 1, 'calt' 1, 'tnum' 1;
+			font-family: 'Inter Display', system-ui;
+			font-feature-settings: 'liga' 1, 'calt' 1, 'tnum' 1;
 			position: fixed;
 			bottom: 16px;
 			left: 16px;
@@ -64,23 +64,25 @@
 			border-radius: 4px;
 			opacity: 0.0;
 			transition: opacity 100ms ease-out;
+			touch-action: none;
+			-ms-touch-action: none;
 		}
 
-        div#overlay:hover {
+		div#overlay:hover {
 			opacity: 1.0;
 		}
 
-        div#overlay p {
+		div#overlay p {
 			margin-top: 2px;
 			margin-bottom: 2px;
 		}
 
-        @media (prefers-color-scheme: light) {
+		@media (prefers-color-scheme: light) {
 			html {
 				background-color: #fff;
 				color: #000
 			}
-        }
+		}
 	</style>
 </head>
 
@@ -93,7 +95,7 @@
 	<h1>This game requires JavaScript and WebGL 2</h1>
 	<p>Please enable these features if disabled (or upgrade to a browser that supports them)</p>
 </canvas>
-<div id="overlay">
+<div id="overlay" style="display: none;">
 	<p>ms/f: &Tab;<span id="overlay-mspf">---</span></p>
 	<p>avg. FPS: &Tab;<span id="overlay-fps">---</span></p>
 	<div id="error-box"></div>
