--- a/shell/index.html
+++ b/shell/index.html
@@ -12,8 +12,7 @@
 			font-feature-settings: 'liga' 1, 'calt' 1;
 		}
 		html {
-			background-color: transparent;
-			color: #fff;
+			background-color: #E6DECF;
 		}
 
 		html,
@@ -43,7 +42,7 @@
 			image-rendering: crisp-edges;
 			/*noinspection CssOverwrittenProperties*/
 			image-rendering: pixelated;
-			/*cursor: none;*/
+			cursor: none;
 		}
 
 		body {
@@ -61,6 +60,7 @@
 			left: 16px;
 			padding: 16px;
 			background-color: #000;
+			color: #fff;
 			border-radius: 4px;
 			opacity: 0.0;
 			transition: opacity 100ms ease-out;
@@ -75,13 +75,6 @@
 		div#overlay p {
 			margin-top: 2px;
 			margin-bottom: 2px;
-		}
-
-		@media (prefers-color-scheme: light) {
-			html {
-				background-color: #fff;
-				color: #000
-			}
 		}
 	</style>
 </head>
